--- a/resnet/experiments/BUILD
+++ b/resnet/experiments/BUILD
@@ -24,3 +24,15 @@ py_library(
     srcs = [],
     deps = [":run_cifar_exp", ":run_imagenet_exp", ":run_imagenet_eval"],
 )
+
+py_binary(
+    name = "run_imagenet_exp_sched",
+    srcs = ["run_imagenet_exp_sched.py"],
+    deps = ["//resnet/utils", "//pyschedlib:local", "//pyschedlib:slurm"]
+)
+
+py_binary(
+    name = "run_imagenet_eval_sched",
+    srcs = ["run_imagenet_eval_sched.py"],
+    deps = ["//resnet/utils", "//pyschedlib:local", "//pyschedlib:slurm"]
+)
